styles/index.css
/* ... */
.pagination {
  align-items: center;
  display: flex;
  gap: .5rem;
  justify-content: center;

  @media (width >= 48rem) {
    justify-content: flex-end;
  }

  button {
    background-color: rgb(var(--color-darkgray));
    border: none;
    border-radius: 100%;
    color: rgb(var(--color-white));
    cursor: pointer;
    font-weight: 700;
    padding: .5rem;
    width: 2.5rem;
    height: 2.5rem;

    &:disabled {
      cursor: not-allowed;
      opacity: .4;
    }

    &:focus {
      outline: .2rem solid rgb(var(--color-neonblue));
    }

    &:hover {
      filter: brightness(1.1);
    }
  }
}

.filter {
  color: rgb(var(--color-black));
  display: flex;
  flex-flow: row wrap;
  gap: .5rem;
  width: 100%;
}

.filter-element {
  align-items: center;
  background-color: rgb(var(--color-lightgray));
  border: var(--pixel) solid rgb(var(--color-lightgray) / 10%);
  border-radius: .25rem;
  box-shadow: inset 0 0 0 var(--pixel) rgb(var(--color-black) / 50%);
  display: flex;
  gap: 1rem;
  height: 2.5rem;
  padding: .25rem;

  .name {
    font-size: .825rem;
    font-weight: 700;
  }

  .buttons {
    display: flex;
    margin-right: -.25rem;

    button {
      background-color: rgb(var(--color-black) / 10%);
      border: none;
      border-left: var(--pixel) solid rgb(var(--color-black) / 20%);
      cursor: pointer;
      overflow: hidden;
      width: 2.5rem;
      height: 2.5rem;

      &:hover {
        background-color: rgb(var(--color-lightgray) / 20%);
      }
    }
  }
}

.filter-element.filter-excluded {
  background-color: rgb(var(--color-warmred));
}

.filter-element.filter-included {
  background-color: rgb(var(--color-neongreen));
}

.stats {
  display: flex;
  background-color: rgb(var(--color-darkgray));
  border-radius: var(--default-border-radius);
  overflow: hidden;

  .green,
  .yellow,
  .red {
    color: rgb(var(--color-black));
    padding: .5rem;
    transition: all .2s ease-in-out;
  }

  .green {
    background-color: rgb(var(--color-neongreen) / 80%);
  }

  .yellow {
    background-color: rgb(var(--color-lemonyellow) / 80%);
  }

  .red {
    background-color: rgb(var(--color-warmred) / 80%);
  }
}

.graph-stats-container {
  background-color: rgb(var(--color-white));
  border-radius: var(--default-border-radius);
  display: none;
  margin-bottom: 2rem;
  padding: 1rem;
  overflow: hidden;

  @media (prefers-color-scheme: dark) {
    background-color: rgb(var(--color-black));
  }

  @media (width >= 48rem) {
    display: block;
  }
}

.highcharts-root {
  @media (prefers-color-scheme: dark) {
    background-color: rgb(var(--color-black));

    .highcharts-background {
      fill: rgb(var(--color-black));
    }

    text {
      fill: rgb(var(--color-white)) !important;
    }

    .highcharts-button-disabled text {
      fill: rgb(var(--color-white) / 35%) !important;
    }

    .highcharts-text-outline {
      stroke-width: 0;
    }

    .highcharts-button-disabled .highcharts-button-box,
    .highcharts-button-normal .highcharts-button-box,
    .highcharts-button-pressed .highcharts-button-box {
      fill: rgb(var(--color-lightgray) / 25%);
    }

    .highcharts-tooltip-box {
      fill: rgb(var(--color-white));

      text {
        fill: rgb(var(--color-black)) !important;
      }
    }
  }
}

.version-table {
  background-color: rgb(var(--color-white));
  border-collapse: collapse;
  margin-block: 2rem;
  width: 100%;

  @media (prefers-color-scheme: dark) {
    background-color: rgb(var(--color-black));
  }

  .table-header {
    background-color: rgb(var(--color-black));
    color: rgb(var(--color-white));

    > th {
      padding: .75rem;
    }
  }

  tbody {
    :first-child {
      overflow-wrap: anywhere;
    }

    :where(& > :not(:last-child)) {
      border-bottom: var(--pixel) solid rgb(var(--color-black) / 10%);

      @media (prefers-color-scheme: dark) {
        border-color: rgb(var(--color-white) / 10%);
      }
    }
  }
}
/* ... */

